--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,9 +1,12 @@
+$primary-color: rgba(85, 109, 137, 0.87);
+$secondary-color: lighten($primary-color, 19%);
+
 body {
-    background-color: #a1adc3;
+    background-color: $primary-color;
 
 }
 
-.container {
+#container {
     width: 300px;
     margin: auto;
     text-align: center;
@@ -21,7 +24,7 @@ body {
 .calculatrice {
     border-radius: 8px;
     padding: 10px;
-    background-color: rgb(196, 203, 217);
+    background-color: $secondary-color;
 
     &__body {
         display: grid;
@@ -43,7 +46,7 @@ body {
 
 
 input:hover {
-    background-color: #a1adc3;
+    background-color: $primary-color;
     color: white;
     border-radius: 5px;
 }
