--- a/style.css
+++ b/style.css
@@ -1,21 +1,21 @@
 body {
-  background-color: #a1adc3; }
+  background-color: rgba(85, 109, 137, 0.87); }
 
-.container {
+#container {
   width: 300px;
   margin: auto;
   text-align: center;
   font-family: roboto, sans-serif;
   font-size: 1.2em;
   padding-top: 100px; }
-  .container h1 {
+  #container h1 {
     color: white;
     font-weight: 400; }
 
 .calculatrice {
   border-radius: 8px;
   padding: 10px;
-  background-color: #c4cbd9; }
+  background-color: rgba(137, 158, 182, 0.87); }
   .calculatrice__body {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -29,6 +29,6 @@ body {
   height: 20px; }
 
 input:hover {
-  background-color: #a1adc3;
+  background-color: rgba(85, 109, 137, 0.87);
   color: white;
   border-radius: 5px; }
